kubernetes/projects/apps/dennispham.me/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dennispham-me
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/den4200/portfolio_backend
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 40Mi
          limits:
            cpu: 50m
            memory: 60Mi
        ports:
        - containerPort: 8000
