kubernetes/projects/apps/dennispham.me/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dennispham-me
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 8000
