kubernetes/projects/apps/dennispham.me/backend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: backend
  namespace: dennispham-me
spec:
  parentRefs:
  - name: axolotl
    namespace: istio-ingress
  hostnames:
  - dennispham.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: backend
      port: 80
